docs: swagger annotations for blogs route
